* Fixing bugs 1. Modify the [orderId] page to return the fallback of the empty object in case of error occurs 2. In request api, if the GET method is empty, modify not to return 204 status code 3. Add scrollbar-show

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,10 @@
     display: none;
   }
 
+  .scrollbar-show::-webkit-scrollbar {
+    display: block;
+  }
+
   .hover-wrapper:hover .overlay {
     background: rgba(0, 0, 0, 0.5);
     position: absolute;
